--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,5 @@ edition = "2021"
 [dependencies]
 tokio = { version = "1", features = ["full"] }
 rand = "0.8.5"
+chrono = "0.4.19"
+tokio-util = "0.7.0"
